feat(core-bundle, admin): add overflow in modal (dialog)

--- a/src/Xutim/Bundle/CoreBundle/templates/components/Admin/Modal.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/components/Admin/Modal.html.twig
@@ -1,15 +1,13 @@
-<div
-    {{
+<div {{
         attributes.defaults({
         'data-controller': 'modal',
         'data-action': 'turbo:before-cache@window->modal#close'
         })
-    }}
->
+    }}>
     <dialog
         data-modal-target="dialog"
         id="pulse-dialog"
-        class="shadow-lg dialog-md"
+        class="shadow-lg dialog-md overflow-y-auto"
         data-action="close->modal#close click->modal#clickOutside"
     >
         {% block content %}{% endblock %}
