feat(core-bundle, block): add text to the list

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/block/_block_item_row.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/block/_block_item_row.html.twig
@@ -99,6 +99,11 @@
         {% endif %}
     </td>
     <td>
+        {% if item.text %}
+            {{ item.text }}
+        {% endif %}
+    </td>
+    <td>
         {% if item.link %}
             <a href="{{ item.link }}">{{ item.link }}</a>
         {% endif %}
