--- a/src/Xutim/Bundle/CoreBundle/templates/admin/block/block_show.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/block/block_show.html.twig
@@ -119,6 +119,7 @@
                                     </th>
                                 {% endif %}
                                 <th>{{ 'content'|trans({}, 'admin') }}</th>
+                                <th>{{ 'text'|trans({}, 'admin') }}</th>
                                 <th>{{ 'link'|trans({}, 'admin') }}</th>
                                 <th>{{ 'tag'|trans({}, 'admin') }}</th>
                                 <th>{{ 'snippet'|trans({}, 'admin') }}</th>
