--- a/src/Xutim/Bundle/CoreBundle/templates/admin/settings/settings_layout.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/settings/settings_layout.html.twig
@@ -22,7 +22,7 @@
 {% block body %}
     <div class="card">
         <div class="row g-0">
-            <div class="col-3 d-none d-md-block border-end">
+            <div class="col-3 border-end">
                 {{
                     include('@XutimCore/admin/settings/_settings_navigation.html.twig')
                 }}
