--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_new.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/article_new.html.twig
@@ -29,6 +29,7 @@
                             'data-editorjs-form-fetch-images-url-value': path('admin_json_image_list'),
                             'data-editorjs-form-page-ids-url-value': path('admin_json_page_list'),
                             'data-editorjs-form-article-ids-url-value': path('admin_json_article_list'),
+                            'data-editorjs-form-tag-ids-url-value': path('admin_json_tag_list'),
                             'data-editorjs-form-fetch-anchor-snippets-url-value': path('admin_json_snippet_list', {type: 'anchor'}),
                             'data-slug-generator-url-value': path('admin_json_content_translation_generate_slug'),
                             'data-slug-generator-enabled-value': article is defined ? 'false' : 'true',
