--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_form.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_form.html.twig
@@ -12,6 +12,7 @@
                 'data-editorjs-form-fetch-images-url-value': path('admin_json_image_list'),
                 'data-editorjs-form-page-ids-url-value': path('admin_json_page_list'),
                 'data-editorjs-form-article-ids-url-value': path('admin_json_article_list'),
+                'data-editorjs-form-tag-ids-url-value': path('admin_json_tag_list'),
                 'data-editorjs-form-disable-editing-value': disableEditing is defined ? disableEditing : false,
                 'data-slug-generator-url-value': path('admin_json_content_translation_generate_slug'),
                 'data-slug-generator-enabled-value': translation == null ? 'true': 'false',
