feat(core-bundle, ui): Improve modal closing when clicking outside.
Previously when mousedown (click) was inside a modal and mouseup outside
it closed the modal. Now it's more permissive.

--- a/src/Xutim/Bundle/CoreBundle/templates/components/Admin/Modal.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/components/Admin/Modal.html.twig
@@ -1,14 +1,14 @@
 <div {{
         attributes.defaults({
         'data-controller': 'modal',
-        'data-action': 'turbo:before-cache@window->modal#close'
+        'data-action': 'turbo:before-cache@window->modal#close '
         })
     }}>
     <dialog
         data-modal-target="dialog"
         id="pulse-dialog"
         class="shadow-lg dialog-md overflow-y-auto"
-        data-action="close->modal#close click->modal#clickOutside"
+        data-action="close->modal#close mousedown->modal#mouseDown mouseup->modal#mouseUp"
     >
         {% block content %}{% endblock %}
     </dialog>
