--- a/src/Xutim/Bundle/CoreBundle/templates/admin/menu/_item_recursive.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/menu/_item_recursive.html.twig
@@ -6,13 +6,19 @@
 >
     {% if node.children is empty %}
         <twig:Xutim:Admin:Icon name="chevron-down-left" class="text-black" />
-        {{ _self.itemLine(items, node, item, child, loop.first, loop.last, selectedItem) }}
+        {{
+            _self.itemLine(items, node, item, child, loop.first, loop.last, selectedItem)
+        }}
         {{ _self.subTree(items, node, item, child, path, selectedItem) }}
     {% else %}
-        {% set detailsOpened = path|reduce((carry, sec, k) => carry is same as(true) or item.id.equals(sec.id), false) %}
+        {%
+            set detailsOpened = path|reduce((carry, sec, k) => carry is same as(true) or item.id.equals(sec.id), false)
+        %}
         <details {{ detailsOpened ? ' open="open"' : '' }} class="text-black">
             <summary class="ms-2{{ isSelectedItem ? ' fw-bold' : '' }}">
-                {{ _self.itemLine(items, node, item, child, loop.first, loop.last, selectedItem) }}
+                {{
+                    _self.itemLine(items, node, item, child, loop.first, loop.last, selectedItem)
+                }}
             </summary>
             {{ _self.subTree(items, node, item, child, path, selectedItem) }}
         </details>
@@ -39,33 +45,45 @@
 
 {% macro itemLine(items, node, item, child, first, last, selectedItem) %}
     {% set isSelectedItem = selectedItem and selectedItem.id.equals(item.id) %}
-    {% set translation = item.object.translationByLocaleOrDefault(content_context_language()) %}
+    {% set translation = item.objectTranslation(content_context_language()) %}
 
     <span class="me-1"></span>
 
-    {% import '@XutimCore/admin/common/translatable.html.twig' as translatable %}
+    {%
+        import '@XutimCore/admin/common/translatable.html.twig' as translatable
+    %}
     {{ translatable.languageBadge(translation) }}
 
-    {% if item.article is null %}
+    {% if item.hasArticle() %}
+        <twig:Xutim:Admin:Icon name="article" class="me-2" />
+    {% elseif item.hasPage() %}
         <twig:Xutim:Admin:Icon name="folder" class="me-2" />
     {% else %}
-        <twig:Xutim:Admin:Icon name="article" class="me-2" />
+        <twig:Xutim:Admin:Icon name="tag" class="me-2" />
     {% endif %}
     <a href="{{ path('admin_menu_list', {id: item.id}) }}">
         <span class="text-black{{ isSelectedItem ? ' fw-bold' : '' }}">
-            {{ item.object.translationByLocaleOrDefault(content_context_language()).title }}
+            {{
+                translation.title is defined ? translation.title : translation.name
+            }}
         </span>
     </a>
 
-    {% if is_granted(constant('Xutim\\CoreBundle\\Entity\\User::ROLE_EDITOR')) %}
+    {%
+        if is_granted(constant('Xutim\\CoreBundle\\Entity\\User::ROLE_EDITOR'))
+    %}
         <div class="dropdown float-end">
             <a href="#" class="link-secondary" data-bs-toggle="dropdown">
                 <twig:Xutim:Admin:Icon name="dots" />
             </a>
             <div class="dropdown-menu dropdown-menu-end">
                 {% set showUrl = null %}
-                {% if item.hasArticle() %}{% set showUrl = 'admin_article_show' %}{% endif %}
-                {% if item.hasPage() %}{% set showUrl = 'admin_page_list' %}{% endif %}
+                {% if item.hasArticle() %}{%
+                        set showUrl = 'admin_article_show'
+                    %}{% endif %}
+                {% if item.hasPage() %}{% set showUrl = 'admin_page_list' %}{%
+                    endif
+                %}
                 {% if showUrl %}
                     <twig:Xutim:Admin:Button
                         tag="a"
