--- a/src/Xutim/Bundle/CoreBundle/templates/admin/menu/menu_item_delete.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/menu/menu_item_delete.html.twig
@@ -1,6 +1,8 @@
 {% extends '@XutimCore/admin/modalBase.html.twig' %}
 {% import '@XutimCore/admin/common/forms.html.twig' as forms %}
-{% set title = 'Are you sure you want to delete this menu entry?'|trans({}, 'admin') %}
+{%
+    set title = 'Are you sure you want to delete this menu entry?'|trans({}, 'admin')
+%}
 
 {% block pageTitle %}{{ title }}{% endblock %}
 
@@ -26,11 +28,11 @@
                             stroke="none"
                             d="M0 0h24v24H0z"
                             fill="none"
-                        ></path>
+                        >
+                        </path>
                         <path d="M12 9v2m0 4v.01"></path>
-                        <path
-                            d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"
-                        ></path>
+                        <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75">
+                        </path>
                     </svg>
                 </p>
                 <h3>{{ title }}</h3>
@@ -38,8 +40,7 @@
         </div>
 
         <div class="card-footer">
-            {{ form_start(form, {attr: {class: 'd-flex align-items-center'}})
-            }}
+            {{ form_start(form, {attr: {class: 'd-flex align-items-center'}}) }}
             <a
                 href="{{ path('admin_menu_list', {id: item.parent ? item.parent.id : null}) }}"
                 class="text-sm font-medium me-auto"
@@ -67,4 +68,8 @@
 
 {% block stream_success %}
     <turbo-stream action="refresh"></turbo-stream>
+
+    <turbo-stream action="update" target="modal">
+        <template></template>
+    </turbo-stream>
 {% endblock %}
