feat: turbo closing modal fix

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/user/create.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/user/create.html.twig
@@ -21,4 +21,8 @@
             {{ include('@XutimCore/admin/user/_user_row.html.twig') }}
         </template>
     </turbo-stream>
+
+    <turbo-stream action="update" target="modal">
+        <template></template>
+    </turbo-stream>
 {% endblock %}
