--- a/src/Xutim/Bundle/SecurityBundle/templates/security/reset_password/check_email.html.twig
+++ b/src/Xutim/Bundle/SecurityBundle/templates/security/reset_password/check_email.html.twig
@@ -1,4 +1,4 @@
-{% extends '@XutimSecurity/admin/security/security_base.html.twig' %}
+{% extends '@XutimSecurity/security/security_base.html.twig' %}
 
 {% block title %}Password Reset Email Sent{% endblock %}
 
@@ -9,13 +9,14 @@
                 If an account matching your email exists, then an email was just
                 sent that contains a link that you can use to reset your
                 password. This link will expire in
-                {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+                {{
+                    resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle')
+                }}.
             </p>
             <p class="fs-h3 text-secondary">
                 If you don't receive an email please check your spam folder or
                 <a href="{{ path('admin_forgot_password_request') }}"
-                    >try again</a
-                >.
+                >try again</a>.
             </p>
         </div>
     </div>
