--- a/src/Xutim/Bundle/SecurityBundle/templates/security/security_base.html.twig
+++ b/src/Xutim/Bundle/SecurityBundle/templates/security/security_base.html.twig
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
     <head>
         <meta charset="{{ _charset }}" />
@@ -9,9 +9,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="robots" content="noindex,nofollow" />
 
-        {%- block javascripts -%}
+        {% block javascripts %}
             {{ importmap('app-admin') }}
-        {%- endblock -%}
+        {% endblock %}
 
         <title>{% block title %}{% endblock %}</title>
     </head>
