feat(core-bundle): add published date edit possibility

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/_published_sidebar_item.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/_published_sidebar_item.html.twig
@@ -5,27 +5,41 @@
     <twig:block name="content">
         {% if article.publishedAt and article.publishedAt > date('now') %}
             <span
-                title="{{article.publishedAt|date('d/m/Y H:i')}}"
+                title="{{ article.publishedAt|date('d/m/Y H:i') }}"
                 data-controller="tooltip"
             >
                 {{ article.publishedAt|time_until }}
             </span>
         {% elseif article.publishedAt %}
             <span
-                title="{{article.publishedAt|date('d/m/Y H:i')}}"
+                title="{{ article.publishedAt|date('d/m/Y H:i') }}"
                 data-controller="tooltip"
             >
                 {{ article.publishedAt|time_ago }}
             </span>
         {% elseif translation.publishedAt %}
             <span
-                title="{{translation.publishedAt|date('d/m/Y H:i')}}"
+                title="{{ translation.publishedAt|date('d/m/Y H:i') }}"
                 data-controller="tooltip"
             >
                 {{ translation.publishedAt|time_ago }}
             </span>
         {% else %}
             {{ 'Not yet published'|trans({}, 'admin') }}
+        {% endif %}
+
+        {% if translation.article.publishedAt != null %}
+            <div class="ms-auto">
+                <twig:Xutim:Admin:Button
+                    tag="a"
+                    variant="link"
+                    class="p-0"
+                    data-turbo-frame="modal"
+                    href="{{ path('admin_article_edit_publication_date', {id: article.id}) }}"
+                >
+                    <twig:Xutim:Admin:Icon name="edit" />
+                </twig:Xutim:Admin:Button>
+            </div>
         {% endif %}
     </twig:block>
 </twig:Xutim:Admin:SidebarItem>
