--- a/src/Xutim/Bundle/RedirectBundle/templates/admin/redirect/_redirect_row.html.twig
+++ b/src/Xutim/Bundle/RedirectBundle/templates/admin/redirect/_redirect_row.html.twig
@@ -1,24 +1,18 @@
-<tr id="redirect-row-{{redirect.id}}">
+<tr id="redirect-row-{{ redirect.id }}">
     <td>
         <a
-            href="{{ path('admin_redirect_edit', {id: redirect.id})}}"
+            href="{{ path('admin_redirect_edit', {id: redirect.id}) }}"
             data-turbo-frame="modal"
         >
             {{ redirect.source }}
         </a>
     </td>
     <td>
-        {{ redirect.targetContentTranslation.title }}
-        {% if redirect.targetContentTranslation.hasPage() %}
-            {% set route = 'admin_page_show_by_slug' %}
-        {% else %}
-            {% set route = 'admin_article_show_by_slug' %}
-        {% endif %}
-
         <a
-            href="{{ path(route, {'slug': redirect.targetContentTranslation.slug}) }}"
+            href="{{ redirect.target }}"
             data-turbo-frame="_top"
         >
+            {{ redirect.target }}
             <twig:ux:icon name="tabler:external-link" class="w-3 h-3" />
         </a>
     </td>
