fix: correct media copy link

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/media/_sidebar.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/media/_sidebar.html.twig
@@ -58,7 +58,7 @@
                     class="btn-link clipboard-input d-flex justify-content-start"
                     variant="default"
                     data-controller="clipboard"
-                    data-clipboard-text="{{ uploaded_asset(file.id) }}"
+                    data-clipboard-text="{{ uploaded_asset(file.fileName) }}"
                     data-bs-toggle="popover"
                     data-bs-container="body"
                     data-bs-placement="top"
