feat: add article/page description help text

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_new.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_new.html.twig
@@ -95,6 +95,8 @@
                                 },
                             })
                         }}
+
+                        {{ form_row(form.description) }}
                     </div>
 
                     <div class="col-sm-6">
