--- a/src/Xutim/Bundle/CoreBundle/templates/admin/article/_tags_sidebar_item.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/article/_tags_sidebar_item.html.twig
@@ -7,31 +7,66 @@
             {% for tag in article.tags %}
                 <div class="mt-1">
                     <twig:Xutim:Admin:Tag :color="tag.color">
-                        {{tag.translationByLocaleOrAny(content_context_language()).name}}
+                        {{ tag.translationByLocaleOrAny(content_context_language()).name }}
                     </twig:Xutim:Admin:Tag>
                 </div>
             {% endfor %}
         </div>
 
-        <div class="ms-auto">
+        <div class="ms-auto dropdown" data-controller="tag-menu"
+             data-tag-menu-csrf-token-value="{{ csrf_token(constant('Xutim\\CoreBundle\\Action\\Admin\\Article\\ToggleTagAction::TOKEN_NAME')) }}">
             <twig:Xutim:Admin:Button
-                tag="a"
+                tag="button"
                 variant="link"
-                class="p-0 "
+                class="p-0"
                 data-bs-toggle="dropdown"
-                data-turbo-frame="modal"
-                href="#"
+                aria-expanded="false"
             >
                 <twig:Xutim:Admin:Icon name="edit" />
             </twig:Xutim:Admin:Button>
-            <div class="dropdown-menu" data-controller="tag-menu" data-tag-menu-csrf-token-value="{{ csrf_token(constant('Xutim\\CoreBundle\\Action\\Admin\\Article\\ToggleTagAction::TOKEN_NAME'))}}">
-                {% for tag in allTags %}
-                    <label class="dropdown-item">
-                        <input class="form-check-input m-0 me-2" type="checkbox" value="{{ tag.id }}" data-action="tag-menu#submitChange" data-update-url="{{path('admin_article_toggle_tag', {id: article.id, tagId: tag.id})}}" {{article.hasTag(tag) ? 'checked': ''}}>
-                        <span class="badge badge-3 tag-status badge-dot" style="background-color: {{tag.color.HTMLHex}}"></span>
-                        {{ tag.translationByLocaleOrAny(content_context_language()).name }}
-                    </label>
-                {% endfor %}
+
+            <div class="dropdown-menu p-2"
+                 style="min-width: 300px; max-height: 350px; overflow-y: auto;"
+                 data-tag-menu-target="menu"
+                 data-bs-auto-close="outside"
+             >
+                 <div>
+                    <h3>{{ 'Apply tags to this article'|trans({}, 'admin') }}</h3>
+                 </div>
+                <div class="mb-2">
+                    <div class="input-icon mb-2">
+                        <span class="input-icon-addon">
+                            <twig:ux:icon name="search" class="text-white w-3 h-3" />
+                        </span>
+                        <input
+                            type="search"
+                            class="form-control"
+                            placeholder="{{ 'Search tags'|trans({}, 'admin') }}"
+                            data-action="input->tag-menu#filter"
+                            data-tag-menu-target="search"
+                        />
+                    </div>
+                </div>
+                <div class="dropdown-divider"></div>
+
+                <div>
+                    {% for tag in allTags %}
+                        <label class="dropdown-item d-flex align-items-center gap-2 cursor-pointer"
+                               data-tag-menu-target="item"
+                               data-name="{{ tag.translationByLocaleOrAny(content_context_language()).name|lower }}"
+                               >
+                            <input class="form-check-input m-0"
+                                   type="checkbox"
+                                   value="{{ tag.id }}"
+                                   data-action="tag-menu#submitChange"
+                                   data-update-url="{{ path('admin_article_toggle_tag', {id: article.id, tagId: tag.id}) }}"
+                                   {{ article.hasTag(tag) ? 'checked' : '' }} >
+                            <span class="badge badge-3 tag-status badge-dot"
+                                  style="background-color: {{ tag.color.HTMLHex }}"></span>
+                            {{ tag.translationByLocaleOrAny(content_context_language()).name }}
+                        </label>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </twig:block>
