feat: Add inline link to a file.

--- a/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_form.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/content_translation/_form.html.twig
@@ -7,6 +7,7 @@
                 'data-editorjs-form-block-codes-value': fetch_block_codes()|json_encode,
                 'data-editorjs-form-tags-value': fetch_tags()|json_encode,
                 'data-editorjs-form-fetch-files-url-value': path('admin_json_file_list'),
+                'data-editorjs-form-fetch-all-files-url-value': path('admin_json_file_all_list'),
                 'data-editorjs-form-fetch-anchor-snippets-url-value': path('admin_json_snippet_list', {type: 'anchor'}),
                 'data-editorjs-form-fetch-file-url-value': path('admin_json_file_show', {id: ':id:'}),
                 'data-editorjs-form-fetch-images-url-value': path('admin_json_image_list'),
