--- a/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_new.html.twig
+++ b/src/Xutim/Bundle/CoreBundle/templates/admin/page/page_new.html.twig
@@ -27,6 +27,7 @@
                             'data-editorjs-form-block-codes-value': fetch_block_codes()|json_encode,
                             'data-editorjs-form-tags-value': fetch_tags()|json_encode,
                             'data-editorjs-form-fetch-files-url-value': path('admin_json_file_list'),
+                            'data-editorjs-form-fetch-all-files-url-value': path('admin_json_file_all_list'),
                             'data-editorjs-form-fetch-file-url-value': path('admin_json_file_show', {id: ':id:'}),
                             'data-editorjs-form-fetch-images-url-value': path('admin_json_image_list'),
                             'data-editorjs-form-page-ids-url-value': path('admin_json_page_list'),
